--- a/Задание-1-уязвимость-отсеков.ipynb
+++ b/Задание-1-уязвимость-отсеков.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,24 +17,22 @@
     "import matplotlib.patches as patches\n",
     "from PIL import Image\n",
     "import itertools\n",
-    "import math\n",
-    "\n",
-    "import itertools as it"
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "S = [0.3, 0.1, 0.15, 0.15, 0.3] # Массив площадей отсеков\n",
-    "m = [1, 1, 3, 2, 4] # Массив кол-ва попаданий для гарантированного поражения"
+    "S = [0.3, 0.1, 0.15, 0.15, 0.3]  # Массив площадей отсеков\n",
+    "m = [1, 1, 3, 2, 4]              # Массив кол-ва попаданий для гарантированного поражения"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +254,7 @@
        "Text(0, 0.5, 'Вероятность поражения')"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     },
