--- a/Modeling_fight.ipynb
+++ b/Modeling_fight.ipynb
@@ -26,354 +26,43 @@
     "        self.n = 15 # скорострельность, 1/м\n",
     "        self.omega = 1,7 # среднее число попаданий, необходимое для поражения цели\n",
     "        self.V = 12 # скорость танка, м/с\n",
-    "\n",
-    "        self.x, self.y = [], []\n",
-    "        self.waypoint_x, self.waypoint_y = [], []\n",
-    "        self.alpha = np.degrees(30)\n",
-    "        self.v = 3\n",
-    "        self.l_rls = 20\n",
-    "        self.l_paf = 5\n",
-    "        self.dmg = 100\n",
-    "        self.health = 1000\n",
-    "        self.reload = 5\n",
+    "        self.Ex_x = 1/1300\n",
     "\n",
     "class ATS_:\n",
     "    def __init__(self):\n",
     "        self.a = 1.8 # ширина, м\n",
     "        self.b = 2 # высота, м\n",
     "        self.type = ['100', '152', 'ПТРК'] # типы пушек\n",
-    "        self.n = {\n",
+    "        self.n = {  # скорострельность\n",
     "            '100': 14,\n",
     "            '152': 12,\n",
-    "            'ПТРК': ['сам', 'ком'][0]\n",
-    "        } # скорострельность\n",
-    "        self.omega = {\n",
+    "            'ПТРК': ['сам', 'ком'][0]   } \n",
+    "        self.omega = {  # тип танковой пушки\n",
     "            '100': 1.5,\n",
     "            '152': 1.2,\n",
     "            'ПТРК': 1.3\n",
     "        }\n",
     "        self.V = 160 # скорость ПТУР, м/c\n",
-    "\n",
-    "        self.x, self.y = [], []\n",
-    "        self.waypoint_x, self.waypoint_y = [], []\n",
-    "        self.alpha = np.degrees(50)\n",
-    "        self.v = 5\n",
-    "        self.l_rls = 30\n",
-    "        self.l_paf = 5\n",
-    "        self.dmg = 400\n",
-    "        self.health = 300\n",
-    "        self.reload = 10\n",
-    "\n",
-    "class battlefiend_:\n",
-    "    def __init__(self):\n",
-    "        self.X_0 = 2100 # начальное расстояние, м\n",
-    "\n",
-    "        self.n = 2\n",
-    "        self.dct = {\n",
-    "            'Видимость': 1,\n",
-    "            'Влажность': 0,\n",
-    "            'Температура': 273\n",
+    "        self.Ex_x = {\n",
+    "            '100': 1/1500,\n",
+    "            '152': 1/900,\n",
+    "            'ПТРК': 1/1500\n",
     "        }\n",
-    "        self.r_step = None\n",
-    "        self.end_x, self.end_y = None, None\n",
-    "        self.r_start = None\n",
-    "        self.r = []\n",
-    "        self.x, self.y = [], []\n",
     "\n",
-    "    def create_geom(self):\n",
-    "        self.l, self.w = 100, 100\n",
-    "        self.start_x, self.start_y = self.l/2 + random.randint(0, 10), self.w/2 + random.randint(0, 10)\n",
-    "        self.r_start = random.randint(round(self.l*4/10), round(self.l/2))\n",
-    "        self.r_step = random.randint(10, 30)\n",
-    "\n",
-    "        self.r.append(self.r_start)\n",
-    "        self.x.append(self.start_x)\n",
-    "        self.y.append(self.start_y)\n",
-    "\n",
-    "        for i in range(self.n):\n",
-    "            self.r.append(self.r[-1] - random.randint(10, 15))\n",
-    "            self.x.append(self.x[-1] + random.randint(-5, 5))\n",
-    "            self.y.append(self.y[-1] + random.randint(-5, 5))\n",
-    "\n",
-    "    def generate(self):\n",
-    "        self.spawn_x_1 = random.randint(0, self.l)\n",
-    "        self.spawn_y_1 = random.randint(0, self.l)\n",
-    "        self.spawn_x_2 = random.randint(0, self.l)\n",
-    "        self.spawn_y_2 = random.randint(0, self.l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class figth_:\n",
-    "    def __init__(self, tank, ATS, battlefield):\n",
+    "    def __init__(self, tank, ATS):\n",
     "        self.tank = tank\n",
     "        self.ATS = ATS\n",
-    "        self.battlefield = battlefield\n",
-    "        self.step = 5\n",
     "\n",
-    "    def generate_data(self):\n",
-    "        self.spawn_x_1 = random.randint(0, round(self.battlefield.l/4))\n",
-    "        self.spawn_y_1 = random.randint(0, round(self.battlefield.l/4))\n",
-    "        self.spawn_x_2 = random.randint(round(self.battlefield.l*3/4), self.battlefield.l)\n",
-    "        self.spawn_y_2 = random.randint(round(self.battlefield.l*3/4), self.battlefield.l)\n",
-    "        self.tank.x.append(self.spawn_x_1)\n",
-    "        self.tank.y.append(self.spawn_y_1)\n",
-    "        self.ATS.x.append(self.spawn_x_2)\n",
-    "        self.ATS.y.append(self.spawn_y_2)\n",
+    "    def calculate(self, X0):\n",
+    "        pass\n",
     "\n",
     "    def plot(self):\n",
-    "        fig, ax = plt.subplots()\n",
-    "        plt.rcParams[\"figure.figsize\"] = (6, 6)\n",
-    "        #tank\n",
-    "        plt.scatter(self.tank.x[-1], self.tank.y[-1], marker='s', c='r')\n",
-    "        c1_1 = plt.Circle((self.tank.x[-1], self.tank.y[-1]), radius=self.tank.l_rls, edgecolor='black', fill=False, linestyle=':')\n",
-    "        c1_2 = plt.Circle((self.tank.x[-1], self.tank.y[-1]), radius=self.tank.l_paf, edgecolor='r', fill=False, linestyle='-.')\n",
-    "        ax.add_patch(c1_1)\n",
-    "        ax.add_patch(c1_2)\n",
-    "        plt.plot(self.tank.x, self.tank.y, color='r', linestyle ='--', linewidth=0.4)\n",
-    "        plt.text(self.tank.x[-1] - 3, self.tank.y[-1] - 5, s='tank')\n",
-    "        plt.text(self.tank.x[-1] - 3, self.tank.y[-1] - 8, s='HP: ' + str(self.tank.health))\n",
-    "        \n",
-    "        #ATS\n",
-    "        plt.scatter(self.ATS.x[-1], self.ATS.y[-1], marker='o', c='b')\n",
-    "        c2_1 = plt.Circle((self.ATS.x[-1], self.ATS.y[-1]), radius=self.ATS.l_rls, edgecolor='black', fill=False, linestyle=':')\n",
-    "        c2_2 = plt.Circle((self.ATS.x[-1], self.ATS.y[-1]), radius=self.ATS.l_paf, edgecolor='b', fill=False, linestyle='-.')\n",
-    "        plt.plot(self.ATS.x, self.ATS.y, color='b', linestyle ='--', linewidth=0.4)\n",
-    "        ax.add_patch(c2_1)\n",
-    "        ax.add_patch(c2_2)\n",
-    "        plt.text(self.ATS.x[-1] - 3, self.ATS.y[-1] + 2, s='ATS')\n",
-    "        plt.text(self.ATS.x[-1] - 3, self.ATS.y[-1] + 5, s='HP: ' + str(self.ATS.health))\n",
-    "        \n",
-    "        #field\n",
-    "        # for i in range(self.battlefield.n + 1):\n",
-    "        #     ax.add_patch(plt.Circle((self.battlefield.x[i], self.battlefield.y[i]), radius=self.battlefield.r[i], edgecolor='g', fill=False, linestyle='--'))\n",
-    "        ax.add_patch(plt.Circle((self.battlefield.x[2], self.battlefield.y[2]), radius=self.battlefield.r[2], edgecolor='g', fill=False, linestyle='--'))\n",
-    "        plt.xlim(0, self.battlefield.l)\n",
-    "        plt.ylim(0, self.battlefield.w)\n",
-    "        plt.grid()\n",
-    "        plt.show()\n",
-    "\n",
-    "    def generate_waypoint(self):\n",
-    "        self.tank.waypoint_x.append(self.tank.x[0])\n",
-    "        self.tank.waypoint_y.append(self.tank.y[0])\n",
-    "        self.ATS.waypoint_x.append(self.ATS.x[0])\n",
-    "        self.ATS.waypoint_y.append(self.ATS.y[0])\n",
-    "        for i in range(self.battlefield.n + 1):\n",
-    "            x1, y1 = self.inside_circle(self.battlefield.x[i], self.battlefield.y[i], self.battlefield.r[i])\n",
-    "            self.tank.waypoint_x.extend(np.linspace(self.tank.waypoint_x[-1], x1, self.ATS.v*self.step))\n",
-    "            self.tank.waypoint_y.extend(np.linspace(self.tank.waypoint_y[-1], y1, self.ATS.v*self.step))\n",
-    "            x2, y2 = self.inside_circle(self.battlefield.x[i], self.battlefield.y[i], self.battlefield.r[i])\n",
-    "            self.ATS.waypoint_x.extend(np.linspace(self.ATS.waypoint_x[-1], x2, self.tank.v*self.step))\n",
-    "            self.ATS.waypoint_y.extend(np.linspace(self.ATS.waypoint_y[-1], y2, self.tank.v*self.step))\n",
-    "\n",
-    "    def inside_circle(self, x, y, r):\n",
-    "        xx, yy = -9999, -9999\n",
-    "        while (xx > (x + r) or xx < (x - r)) and (yy > (y + r) or yy < (y - r)):\n",
-    "            xx = random.randint(x - r, x + r)\n",
-    "            yy = random.randint(y - r, y + r)\n",
-    "        return xx, yy\n",
-    "\n",
-    "    def simulate(self):\n",
-    "        self.tank.rls_flag, self.tank.paf_flag = False, False\n",
-    "        self.ATS.rls_flag, self.ATS.paf_flag = False, False\n",
-    "        for i in range(min(len(self.tank.waypoint_x), len(self.ATS.waypoint_x))):\n",
-    "            clear_output(wait=True)\n",
-    "            self.range = self.check_distanse(i)\n",
-    "            #print(self.range)\n",
-    "            if self.tank.paf_flag and self.ATS.paf_flag:\n",
-    "                #paf's\n",
-    "                if self.tank.health <= 0:\n",
-    "                    return 'ATS win!'\n",
-    "                elif self.ATS.health <= 0:\n",
-    "                    return 'tank win!'\n",
-    "                else:\n",
-    "                    self.tank.health -= round(random.random()*self.ATS.dmg)\n",
-    "                    self.ATS.health -= round(random.random()*self.tank.dmg)\n",
-    "                a = input()\n",
-    "                #stand\n",
-    "                self.tank.x.append(self.tank.x[-1])\n",
-    "                self.tank.y.append(self.tank.y[-1])\n",
-    "                self.ATS.x.append(self.ATS.x[-1])\n",
-    "                self.ATS.y.append(self.ATS.y[-1])\n",
-    "                print('Fight!')\n",
-    "            \n",
-    "            elif self.ATS.paf_flag:\n",
-    "                #paf's\n",
-    "                if self.tank.health <= 0:\n",
-    "                    return 'ATS win!'\n",
-    "                    break\n",
-    "                elif self.ATS.health <= 0:\n",
-    "                    return 'tank win!'\n",
-    "                    break\n",
-    "                else:\n",
-    "                    self.tank.health -= round(random.random()*self.ATS.dmg)\n",
-    "                a = input()\n",
-    "                self.ATS.x.append(self.ATS.x[-1])\n",
-    "                self.ATS.y.append(self.ATS.y[-1])\n",
-    "                #move tank\n",
-    "                if self.range < self.tank.l_paf:\n",
-    "                    self.tank.paf_flag = True\n",
-    "                coef_x = 1\n",
-    "                if self.tank.x[-1] > self.ATS.x[-1]:\n",
-    "                    coef_x = -1\n",
-    "                coef_y = 1\n",
-    "                if self.tank.y[-1] > self.ATS.y[-1]:\n",
-    "                    coef_y = -1\n",
-    "                if abs(self.ATS.x[-1] - self.tank.x[-1]) > abs(self.ATS.y[-1] - self.tank.y[-1]):\n",
-    "                    self.tank.step_x, self.tank.step_y = max(self.tank.step_x, self.tank.step_y), min(self.tank.step_x, self.tank.step_y)\n",
-    "                else:\n",
-    "                    self.tank.step_x, self.tank.step_y = min(self.tank.step_x, self.tank.step_y), max(self.tank.step_x, self.tank.step_y)\n",
-    "                self.tank.x.append(self.tank.x[-1] + coef_x*self.tank.step_x)\n",
-    "                self.tank.y.append(self.tank.y[-1] + coef_y*self.tank.step_y)\n",
-    "                \n",
-    "            elif self.tank.paf_flag:\n",
-    "                #paf's\n",
-    "                if self.tank.health <= 0:\n",
-    "                    return 'ATS win!'\n",
-    "                    break\n",
-    "                elif self.ATS.health <= 0:\n",
-    "                    return 'tank win!'\n",
-    "                    break\n",
-    "                else:\n",
-    "                    self.ATS.health -= round(random.random()*self.tank.dmg)\n",
-    "                # a = input() \n",
-    "                self.tank.x.append(self.tank.x[-1])\n",
-    "                self.tank.y.append(self.tank.y[-1])\n",
-    "                #move ATS\n",
-    "                if self.range < self.ATS.l_paf:\n",
-    "                    self.ATS.paf_flag = True\n",
-    "                coef_x = 1\n",
-    "                if self.tank.x[-1] > self.ATS.x[-1]:\n",
-    "                    coef_x = -1\n",
-    "                coef_y = 1\n",
-    "                if self.tank.y[-1] > self.ATS.y[-1]:\n",
-    "                    coef_y = -1\n",
-    "                if abs(self.ATS.x[-1] - self.tank.x[-1]) > abs(self.ATS.y[-1] - self.tank.y[-1]):\n",
-    "                    self.ATS.step_x, self.ATS.step_y = max(self.ATS.step_x, self.ATS.step_y), min(self.ATS.step_x, self.ATS.step_y)\n",
-    "                else:\n",
-    "                    self.ATS.step_x, self.ATS.step_y = min(self.ATS.step_x, self.ATS.step_y), max(self.ATS.step_x, self.ATS.step_y)\n",
-    "                self.ATS.x.append(self.ATS.x[-1] - coef_x*self.ATS.step_x)\n",
-    "                self.ATS.y.append(self.ATS.y[-1] - coef_y*self.ATS.step_y)\n",
-    "\n",
-    "            elif self.tank.rls_flag and self.ATS.rls_flag:\n",
-    "                if self.range < self.tank.l_paf:\n",
-    "                    self.tank.paf_flag = True\n",
-    "                if self.range < self.ATS.l_paf:\n",
-    "                    self.ATS.paf_flag = True\n",
-    "                #remove ATS\n",
-    "                coef_x = 1\n",
-    "                if self.tank.x[-1] > self.ATS.x[-1]:\n",
-    "                    coef_x = -1\n",
-    "                coef_y = 1\n",
-    "                if self.tank.y[-1] > self.ATS.y[-1]:\n",
-    "                    coef_y = -1\n",
-    "                if abs(self.ATS.x[-1] - self.tank.x[-1]) > abs(self.ATS.y[-1] - self.tank.y[-1]):\n",
-    "                    self.ATS.step_x, self.ATS.step_y = max(self.ATS.step_x, self.ATS.step_y), min(self.ATS.step_x, self.ATS.step_y)\n",
-    "                else:\n",
-    "                    self.ATS.step_x, self.ATS.step_y = min(self.ATS.step_x, self.ATS.step_y), max(self.ATS.step_x, self.ATS.step_y)\n",
-    "                self.ATS.x.append(self.ATS.x[-1] - coef_x*self.ATS.step_x)\n",
-    "                self.ATS.y.append(self.ATS.y[-1] - coef_y*self.ATS.step_y)\n",
-    "                #remove tank\n",
-    "                if abs(self.ATS.x[-1] - self.tank.x[-1]) > abs(self.ATS.y[-1] - self.tank.y[-1]):\n",
-    "                    self.tank.step_x, self.tank.step_y = max(self.tank.step_x, self.tank.step_y), min(self.tank.step_x, self.tank.step_y)\n",
-    "                else:\n",
-    "                    self.tank.step_x, self.tank.step_y = min(self.tank.step_x, self.tank.step_y), max(self.tank.step_x, self.tank.step_y)\n",
-    "                self.tank.x.append(self.tank.x[-1] + coef_x*self.tank.step_x)\n",
-    "                self.tank.y.append(self.tank.y[-1] + coef_y*self.tank.step_y)\n",
-    "\n",
-    "\n",
-    "            elif self.tank.rls_flag:\n",
-    "                if self.range < self.tank.l_paf:\n",
-    "                    self.tank.paf_flag = True\n",
-    "                #remove tank\n",
-    "                coef_x = 1\n",
-    "                if self.tank.x[-1] > self.ATS.x[-1]:\n",
-    "                    coef_x = -1\n",
-    "                coef_y = 1\n",
-    "                if self.tank.y[-1] > self.ATS.y[-1]:\n",
-    "                    coef_y = -1\n",
-    "                if abs(self.ATS.x[-1] - self.tank.x[-1]) > abs(self.ATS.y[-1] - self.tank.y[-1]):\n",
-    "                    self.tank.step_x, self.tank.step_y = max(self.tank.step_x, self.tank.step_y), min(self.tank.step_x, self.tank.step_y)\n",
-    "                else:\n",
-    "                    self.tank.step_x, self.tank.step_y = min(self.tank.step_x, self.tank.step_y), max(self.tank.step_x, self.tank.step_y)\n",
-    "                self.tank.x.append(self.tank.x[-1] + coef_x*self.tank.step_x)\n",
-    "                self.tank.y.append(self.tank.y[-1] + coef_y*self.tank.step_y)\n",
-    "                \n",
-    "                self.ATS.x.append(self.ATS.waypoint_x[i])\n",
-    "                self.ATS.y.append(self.ATS.waypoint_y[i])\n",
-    "\n",
-    "            elif self.ATS.rls_flag:\n",
-    "                if self.range < self.ATS.l_paf:\n",
-    "                    self.ATS.paf_flag = True\n",
-    "                #remove ATS\n",
-    "                coef_x = 1\n",
-    "                if self.tank.x[-1] > self.ATS.x[-1]:\n",
-    "                    coef_x = -1\n",
-    "                coef_y = 1\n",
-    "                if self.tank.y[-1] > self.ATS.y[-1]:\n",
-    "                    coef_y = -1\n",
-    "                if abs(self.ATS.x[-1] - self.tank.x[-1]) > abs(self.ATS.y[-1] - self.tank.y[-1]):\n",
-    "                    self.ATS.step_x, self.ATS.step_y = max(self.ATS.step_x, self.ATS.step_y), min(self.ATS.step_x, self.ATS.step_y)\n",
-    "                else:\n",
-    "                    self.ATS.step_x, self.ATS.step_y = min(self.ATS.step_x, self.ATS.step_y), max(self.ATS.step_x, self.ATS.step_y)\n",
-    "                self.ATS.x.append(self.ATS.x[-1] - coef_x*self.ATS.step_x)\n",
-    "                self.ATS.y.append(self.ATS.y[-1] - coef_y*self.ATS.step_y)\n",
-    "\n",
-    "                self.tank.x.append(self.tank.waypoint_x[i])\n",
-    "                self.tank.y.append(self.tank.waypoint_y[i])\n",
-    "\n",
-    "            else:                                       # not self.tank.rls_flag and not self.ATS.rls_flag:\n",
-    "                if self.range < self.tank.l_rls:\n",
-    "                    self.tank.rls_flag = True\n",
-    "                if  self.range < self.ATS.l_rls:\n",
-    "                    self.ATS.rls_flag = True\n",
-    "                self.tank.x.append(self.tank.waypoint_x[i])\n",
-    "                self.tank.y.append(self.tank.waypoint_y[i])\n",
-    "                self.tank.step_x = abs(self.tank.waypoint_x[i + 1] - self.tank.waypoint_x[i])\n",
-    "                self.tank.step_y = abs(self.tank.waypoint_y[i + 1] - self.tank.waypoint_y[i])\n",
-    "                self.ATS.x.append(self.ATS.waypoint_x[i])\n",
-    "                self.ATS.y.append(self.ATS.waypoint_y[i])\n",
-    "                self.ATS.step_x = abs(self.ATS.waypoint_x[i + 1] - self.ATS.waypoint_x[i])\n",
-    "                self.ATS.step_y = abs(self.ATS.waypoint_y[i + 1] - self.ATS.waypoint_y[i])\n",
-    "                \n",
-    "            self.plot()\n",
-    "        \n",
-    "    def check_distanse(self, i):\n",
-    "        self.delta_x = abs(self.tank.x[-1] - self.ATS.x[-1])\n",
-    "        self.delta_y = abs(self.tank.y[-1] - self.ATS.y[-1])\n",
-    "        return np.sqrt(self.delta_x**2 + self.delta_y**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count_t = 0\n",
-    "count_a = 0\n",
-    "for i in range(100):\n",
-    "    tank = tank_()\n",
-    "    ATS = ATS_()\n",
-    "    battlefiend = battlefiend_()\n",
-    "    battlefiend.create_geom()\n",
-    "    figth = figth_(tank, ATS, battlefiend)\n",
-    "    figth.generate_data()\n",
-    "    figth.generate_waypoint()\n",
-    "    try:\n",
-    "        tmp = figth.simulate()\n",
-    "        if tmp == 'tank win!':\n",
-    "            count_t += 1\n",
-    "        else:\n",
-    "            count_a += 1\n",
-    "        figth.plot()\n",
-    "    except:\n",
     "        pass\n",
-    "print(count_a, count_t)"
+    "    \n",
+    "tank = tank_()\n",
+    "ATS = ATS_()\n",
+    "figth = figth_(tank, ATS)"
    ]
   }
  ],
